RESOLVED FIXED253924
Wide-layout attachment does not save via drag and drop
https://bugs.webkit.org/show_bug.cgi?id=253924
Summary Wide-layout attachment does not save via drag and drop
Gerald Squelart
Reported 2023-03-14 17:46:11 PDT
Drag an attachment from Mail to Files, nothing gets dropped. This is intermittent but frequent, mostly on iOS. rdar://106567546
Attachments
Gerald Squelart
Comment 1 2023-03-14 17:57:02 PDT
EWS
Comment 2 2023-03-15 16:24:16 PDT
Committed 261720@main (cec6fc7f82ae): <https://commits.webkit.org/261720@main> Reviewed commits have been landed. Closing PR #11531 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.