Clients should not be informed about inner image-only attachments https://bugs.webkit.org/show_bug.cgi?id=253924 rdar://106567546

Reviewed by Tim Horton and Aditya Keerthi.

Image-only attachments are an implementation detail of the new wide-layout attachments. (This will eventually be removed, see rdar://105252742 )

Because clients (like Mail) knew about this image-only attachment, they could confusingly give information (about the referenced file) only to this inner attachment, so when the outer attachment brick would get dropped elsewhere it wouldn't know what information to provide, which resulted in drag-and-drops doing nothing.

The solution is to not inform clients about image-only attachments.

* Source/WebCore/editing/Editor.cpp:
(WebCore::Editor::didInsertAttachmentElement):

Canonical link: https://commits.webkit.org/261720@main