Source/WebCore/editing/Editor.cpp
@@ -4326,6 +4326,9 @@ void Editor::cloneAttachmentData(const String& fromIdentifier, const String& toI
 
 void Editor::didInsertAttachmentElement(HTMLAttachmentElement& attachment)
 {
+    if (attachment.isImageOnly())
+        return;
+
     auto identifier = attachment.uniqueIdentifier();
     if (identifier.isEmpty())
         return;
